# blind-watermark-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  lib.rs  main.rs  prelude.rs  quantization.rs  strategy.rs  transform.rs  utils.rs
src/transform/: cut.rs  dct.rs  dwt.rs  embed.rs  padding.rs  yuv.rs
tests/: add_and_extract_string_wm.rs  add_and_extract_watermark.rs  add_and_extract_watermark_plain.rs
