[package]
name = "blind_watermark"
version = "0.1.1"
edition = "2021"
description = "Picture blind watermarking library."
license = "MIT OR Apache-2.0"
authors = ["Naganohara Yoshino <naganohara-yoshino@outlook.com>"]
homepage = "https://github.com/naganohara-yoshino/blind-watermark-rust"
repository = "https://github.com/naganohara-yoshino/blind-watermark-rust"
documentation = "https://docs.rs/blind_watermark"
readme = "README.md"
keywords = ["watermark", "image", "blind-watermark", "steganography"]
categories = ["multimedia::images", "algorithms"]
exclude = ["main.rs"]

[dependencies]
anyhow = "1"
faer = "0.23"
image = "0.25"
num = "0.4"
bitvec = "1.0"
derive_builder = "0.20"
rayon = "1.11"
itertools = "0.14"
rand = "0.9"
rand_pcg = "0.9"

[profile.dev.package.faer]
opt-level = 3


[dev-dependencies]
approx = "0.5"
