[package]
name = "blind_watermark"
version = "0.1.2"
edition = "2024"
rust-version = "1.85.0"
description = "Picture blind watermarking."
license = "MIT OR Apache-2.0"
authors = ["Naganohara Yoshino <naganohara-yoshino@outlook.com>"]
homepage = "https://github.com/naganohara-yoshino/blind-watermark-rust"
repository = "https://github.com/naganohara-yoshino/blind-watermark-rust"
documentation = "https://docs.rs/blind_watermark"
readme = "README.md"
keywords = ["watermark", "image", "blind-watermark", "steganography"]
categories = ["multimedia::images", "algorithms", "cli", "utility"]

[dependencies]
anyhow = "1"
faer = "0.23"
image = "0.25"
num = "0.4"
bitvec = "1.0"
derive_builder = "0.20"
rayon = "1.11"
itertools = "0.14"
rand = "0.9"
rand_pcg = "0.9"
indicatif = { version = "0.18", features = ["rayon"] }
colored = "3.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"

[profile.dev.package.faer]
opt-level = 3


[dev-dependencies]
approx = "0.5"
